Gpgconf --apply-profile fails if scdaemon is not installed
Closed, ResolvedPublic

Assigned To
Authored By
aheinecke
Jul 28 2017, 3:53 PM
Subscribers

Description

Noticed this trying to test some packages on a clean system and scdaemon is optional in ubuntu.

Without scdaemon gpgconf --apply-profile /usr/share/doc/gnupg2/examples/vsnfd.prf fails with

gpgconf: Fehler bei der Ausführung von '/usr/lib/gnupg2/scdaemon': wahrscheinlich nicht installiert

Well. And Kleopatra eats the error. But this is my problem ;-)

Fwiw I think this is minor.